readme and css grid layout

--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Restuarants You should Go To</title>
 </head>
 <body>
-    <p>hello</p>
+    <header>Restaurants</header>
+    <div class="row">
+        <div class="col-desk-4 col-tab-6" ><h1>Bonchon</h1>Bonchon is the best Korean place ever</div>
+        <div class="col-desk-4 col-tab-6" ><h1>McDonald's</h1>McDonald's is a fast food place</div>
+        <div class="col-desk-4 col-mob-12"><h1>The Buffet</h1>The Buffet serves various asian styled buffet foods.</div>
+    </div>
+    <br>
+    <div>I hope you enjoyed this!!</div>
+
 </body>
 </html>
