added sections for readability

--- a/index.html
+++ b/index.html
@@ -9,13 +9,32 @@
 </head>
 <body>
     <header>Restaurants</header>
+
     <div class="row">
-        <div class="col-desk-4 col-tab-6" ><h1>Bonchon</h1>Bonchon is the best Korean place ever</div>
-        <div class="col-desk-4 col-tab-6" ><h1>McDonald's</h1>McDonald's is a fast food place</div>
-        <div class="col-desk-4 col-mob-12"><h1>The Buffet</h1>The Buffet serves various asian styled buffet foods.</div>
+
+        <div class="col-lg-4 col-md-6">
+            <section class="bonchon">
+                <h1 id = "bon">Bonchon</h1>
+                <p>Bonchon is the best Korean place ever</p>
+            </section>
+        </div>
+
+        <div class="col-lg-4 col-md-6">
+            <section class="mcDonalds">
+                <h1 id = "mc">McDonald's</h1>
+                <p>McDonald's is a fast food place</p>
+            </section>  
+        </div>
+
+        <div class="col-lg-4 col-sd-12">
+            <section class="buffet">
+                <h1 id="buf">The Buffet</h1>
+                <p>The Buffet serves various asian styled buffet foods.</p>
+            </section>
+        </div>   
     </div>
     <br>
-    <div>I hope you enjoyed this!!</div>
+    <article>These are the best selections!</article>
 
 </body>
 </html>
