--- a/index.html
+++ b/index.html
@@ -8,33 +8,38 @@
     <title>Restuarants You should Go To</title>
 </head>
 <body>
-    <header>Restaurants</header>
+    <header>My Hobbies</header>
 
     <div class="row">
 
         <div class="col-lg-4 col-md-6">
-            <section class="bonchon">
-                <h1 id = "bon">Bonchon</h1>
-                <p>Bonchon is the best Korean place ever</p>
+            <section class="cycling">
+                <h1>Cycling</h1>
+                <p>I've been racing bikes competitively for 7 years now. 
+                   It's a very competitivel and fun sport. There's nothing like speed!
+                </p>
             </section>
         </div>
 
         <div class="col-lg-4 col-md-6">
             <section class="mcDonalds">
-                <h1 id = "mc">McDonald's</h1>
-                <p>McDonald's is a fast food place</p>
+                <h1>Math</h1>
+                <p>Math is very hard but enjoyable at the same time. There's nothing like sitting through a hard problem and coming up with a solution.</p>
             </section>  
         </div>
 
-        <div class="col-lg-4 col-sd-12">
-            <section class="buffet">
-                <h1 id="buf">The Buffet</h1>
-                <p>The Buffet serves various asian styled buffet foods.</p>
+        <div class="col-lg-4 col-md-12 col-sd-12">
+            <section class="programming">
+                <h1>Programming</h1>
+                <p>The world is run on code. Of course I have now at least a bit about it. Anyway, a career in AI requires a decent handle and understanding about both computer hardware and software. Both of which I'm learning.  
+                </p>
+                
             </section>
         </div>   
     </div>
-    <br>
-    <article>These are the best selections!</article>
+    
+
+    <article id="note">More to come!</article>
 
 </body>
 </html>
